Add tiket and payment controller
