# docs/swagger.json
@@ -2552,6 +2552,153 @@
         ]
       }
     },
+    "/tiket/": {
+      "get": {
+        "tags": [
+          "Tiket"
+        ],
+        "summary": "Get tikets",
+        "description": "Get all tikets.",
+        "operationId": "getAllTiket",
+        "responses": {
+          "200": {
+            "description": "Success get all tikets",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "Success"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Tikets"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "No available data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NoData"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Failed bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Res404"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": [ ]
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Tiket"
+        ],
+        "summary": "Create data tiket",
+        "description": "Can create tiket data.",
+        "operationId": "createTiket",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Tiket"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Success create data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "Data tiket berhasil ditambahkan"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "user": {
+                          "$ref": "#/components/schemas/Tikets"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Failed bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Res404"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Invalid input supplied",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "failed"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Terjadi kesalahan pada server"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failed bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Res400"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": [ ]
+          }
+        ]
+      }
+    },
     "/notification/": {
       "get": {
         "tags": [
@@ -3456,6 +3603,112 @@
           "expired_date": {
             "type": "string",
             "example": "2025-05-04T14:20:27.537Z"
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "2023-05-04T14:20:27.537Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "2023-05-04T14:20:27.537Z"
+          }
+        }
+      },
+      "Tiket": {
+        "type": "object",
+        "properties": {
+          "type_of_class": {
+            "type": "string",
+            "example": "Economy Class",
+            "enum": [
+              "Economy Class",
+              "Business Class",
+              "First Class",
+              "Premium Class"
+            ]
+          },
+          "type_of_passenger": {
+            "type": "string",
+            "example": "Adult",
+            "enum": [
+              "Adult",
+              "Child",
+              "Baby"
+            ]
+          },
+          "price": {
+            "type": "integer",
+            "example": 20000
+          },
+          "seat_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "flight_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "passenger_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "transaction_id": {
+            "type": "integer",
+            "example": 1
+          }
+        },
+        "required": [
+          "type_of_class",
+          "type_of_passenger",
+          "price"
+        ]
+      },
+      "Tikets": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "example": 10
+          },
+          "type_of_class": {
+            "type": "string",
+            "example": "Economy Class",
+            "enum": [
+              "Economy Class",
+              "Business Class",
+              "First Class",
+              "Premium Class"
+            ]
+          },
+          "type_of_passenger": {
+            "type": "string",
+            "example": "Adult",
+            "enum": [
+              "Adult",
+              "Child",
+              "Baby"
+            ]
+          },
+          "price": {
+            "type": "integer",
+            "example": 20000
+          },
+          "seat_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "flight_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "passenger_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "transaction_id": {
+            "type": "integer",
+            "example": 1
           },
           "createdAt": {
             "type": "string",
